--- a/tns-platform-declarations/tsconfig.json
+++ b/tns-platform-declarations/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es5",
         "experimentalDecorators": true,
         "lib": [
-            "es2016"
+            "es2016", "dom"
         ]
     },
     "exclude": [
