--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -7,7 +7,10 @@
         "declaration": false,
         "noImplicitAny": false,
         "noImplicitUseStrict": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "lib": [
+            "dom", "es6"
+        ]
     },
     "files": [
         "tns-core-modules/tns-core-modules.d.ts"
